fix: sidenav con position fixed y z-index correcto para no desplazar el body

--- a/frontend/src/styles/components/_nav-sidenav.scss
+++ b/frontend/src/styles/components/_nav-sidenav.scss
@@ -19,10 +19,14 @@ $sidenav-width:           240px;
 $sidenav-width-collapsed: 56px;
 
 .nav-sidenav {
+  position: fixed;
+  top: $header-height;
+  left: 0;
+  z-index: $z-sidenav;
   display: flex;
   flex-direction: column;
   width: $sidenav-width;
-  height: 100%;
+  height: calc(100vh - #{$header-height});
   background-color: $color-surface;
   border-right: $border-width $border-style $color-border;
   overflow: hidden;
